fix(merchant): harden merchant portal and align workbench counts
Fix merchant-mp todo badge/list consistency, auth/export races, and UX edge cases; add feature packs, safer column mapping, and rebuild admin assets.

Co-authored-by: Cursor <cursoragent@cursor.com>